--- a/CSS/home.css
+++ b/CSS/home.css
@@ -40,6 +40,7 @@
     
     .image {
         background-image: url("../Media/Pages/Main/IMG_8199.JPG");
+        background-position-x: 50%;
         background-size: cover;
         height: 100vh;
     }
