--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -13,6 +13,7 @@
             p {
                 padding: 1%;
                 transition: 0.2s;
+                border-radius: 10px;
             }
         }
         a:hover {
