--- a/CSS/home.css
+++ b/CSS/home.css
@@ -16,6 +16,7 @@
                 p {
                     padding: 1%;
                     transition: 0.2s;
+                    border-radius: 10px;
                 }
             }
             a:hover {
