--- a/CSS/home.css
+++ b/CSS/home.css
@@ -36,6 +36,12 @@
             .spacer {
                 visibility: hidden;
             }
+            button {
+                background-color: black;
+                border: none;
+                border-radius: 10px;
+                color: aquamarine;
+            }
         }
     }
     
