--- a/CSS/global.css
+++ b/CSS/global.css
@@ -84,6 +84,11 @@ body {
         font-weight: 400;
         font-style: normal; 
     }
+    button {
+        font-family: "Arvo", serif;
+        font-weight: 400;
+        font-style: normal; 
+    }
 }
 
 @keyframes fadeInAnimation {
