Added padding to button element

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -23,6 +23,7 @@
                 border-radius: 10px;
                 color: aquamarine;
                 width: fit-content;
+                padding: 1%;
             }
         }
     }
