--- a/CSS/global.css
+++ b/CSS/global.css
@@ -46,14 +46,18 @@ header {
         
         a {
             text-decoration: none;
-            color: black;
+            color: aquamarine;
             transition: 0.2s;
+            border: none;
+            border-radius: 10px;
+            padding: 1%;
         }
 
         a:hover {
             color: #FDFD96;
             transition: 0.2s;
             text-decoration: underline;
+            padding: 2%;
         }
         
         ul {
