--- a/CSS/global.css
+++ b/CSS/global.css
@@ -58,6 +58,7 @@ header {
             transition: 0.2s;
             background-color: aquamarine;
             border: solid 1px black;
+            border-radius: 10px;
         }
         
         ul {
