--- a/CSS/home.css
+++ b/CSS/home.css
@@ -31,6 +31,7 @@
                 transition: 0.2s;
                 background-color: aquamarine;
                 border: solid 1px black;
+                border-radius: 10px;
             }
         }
     }
