--- a/CSS/global.css
+++ b/CSS/global.css
@@ -48,9 +48,12 @@ header {
             text-decoration: none;
             color: aquamarine;
             transition: 0.2s;
-            border: none;
-            border-radius: 10px;
-            padding: 1%;
+            p {
+                border: solid 1px black;
+                border-radius: 10px;
+                padding: 1%;
+                background-color: black;
+            }
         }
 
         a:hover {
@@ -59,6 +62,12 @@ header {
             background-color: aquamarine;
             border: solid 1px black;
             border-radius: 10px;
+            p {
+                border: solid 1px black;
+                border-radius: 10px;
+                padding: 1%;
+                background-color: aquamarine;
+            }
         }
         
         ul {
