--- a/CSS/global.css
+++ b/CSS/global.css
@@ -57,7 +57,7 @@ header {
         }
 
         a:hover {
-            color: #FDFD96;
+            color: #FAC898;
             transition: 0.2s;
             background-color: aquamarine;
             border: solid 1px black;
