--- a/CSS/home.css
+++ b/CSS/home.css
@@ -28,7 +28,7 @@
                 transition: 0.2s;
             }
             button:hover {
-                color: #FDFD96;
+                color: #FAC898;
                 transition: 0.2s;
                 background-color: aquamarine;
                 border: solid 1px black;
