--- a/CSS/global.css
+++ b/CSS/global.css
@@ -39,7 +39,7 @@ header {
             min-width: 150px;
         }
     }
-    .nav {
+    .navigation {
         display: flex;
         justify-content: center;
         width: 100%;
