--- a/CSS/global.css
+++ b/CSS/global.css
@@ -42,6 +42,7 @@ header {
     .navigation {
         display: flex;
         justify-content: center;
+        align-items: center;
         width: 100%;
         
         a {
