--- a/CSS/global.css
+++ b/CSS/global.css
@@ -45,44 +45,23 @@ header {
         align-items: center;
         width: 100%;
         
-        a {
-            text-decoration: none;
+        button {
+            background-color: black;
+            border: none;
+            border-radius: 10px;
             color: aquamarine;
+            width: fit-content;
+            padding: 1%;
+            border: solid 1px black;
             transition: 0.2s;
-            p {
-                border: solid 1px black;
-                border-radius: 10px;
-                padding: 1%;
-                background-color: black;
-            }
         }
-
-        a:hover {
+        button:hover {
             color: #FAC898;
             transition: 0.2s;
+            padding: 1%;
             background-color: aquamarine;
             border: solid 1px black;
             border-radius: 10px;
-            p {
-                border: solid 1px black;
-                border-radius: 10px;
-                padding: 1%;
-                background-color: aquamarine;
-            }
-        }
-        
-        ul {
-            list-style: none;
-            justify-content: center;
-            display: flex;
-
-            li {
-                display: inline;
-            }
-
-            .spacing {
-                margin-right: 10px;
-            }
         }
     }
 }
