--- a/CSS/global.css
+++ b/CSS/global.css
@@ -54,6 +54,8 @@ header {
             padding: 1%;
             border: solid 1px black;
             transition: 0.2s;
+            margin-left: 1%;
+            margin-right: 1%;
         }
         button:hover {
             color: #FAC898;
@@ -62,6 +64,8 @@ header {
             background-color: aquamarine;
             border: solid 1px black;
             border-radius: 10px;
+            margin-left: 1%;
+            margin-right: 1%;
         }
     }
 }
