--- a/CSS/global.css
+++ b/CSS/global.css
@@ -39,7 +39,10 @@ header {
             min-width: 150px;
         }
     }
-    .navigation {        
+    .navigation {
+        width: 100%;
+        align-items: center;
+        text-align: center;        
         button {
             background-color: black;
             border: none;
