--- a/CSS/global.css
+++ b/CSS/global.css
@@ -25,43 +25,48 @@
 }
 
 header {
-    margin: 0%;
-    padding: 0%;
-    width: 100%;
     .header-logo {
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
+        a {
+            display: flex;
+            justify-content: center;
+        }
         img {
             margin-top: 50px;
-            margin-bottom: 50px;
-            width: 60%;
+            margin-bottom: 25px;
+            width: 40%;
             min-width: 150px;
         }
     }
-    .navigation {
-        width: 100%;
+    .navigation-bar {
+        display: flex;
+        justify-content: center;
         align-items: center;
-        text-align: center;
-        button {
-            display: inline-flex;
-            background-color: black;
-            border: none;
-            border-radius: 10px;
-            color: aquamarine;
-            width: fit-content;
+        .navigation-item {
+            display: inline-block;
             margin: 1%;
-            border: solid 1px black;
-            transition: 0.2s;
-        }
-        button:hover {
-            display: inline-flex;
-            color: #FAC898;
-            transition: 0.2s;
-            margin: 1%;
-            background-color: aquamarine;
-            border: solid 1px black;
-            border-radius: 10px;
+            button {
+                text-wrap: nowrap;
+                border: solid 1px black;
+                border-radius: 10px;
+                background-color: black;
+                color: aquamarine;
+                padding: 1vh;
+                transition: 0.2s;
+            }
+            button:hover {
+                background-color: white;
+                color: black;
+                transition: 0.2s;
+            }
+            .active {
+                    background-color: white !important;
+                    color: black !important;
+                    text-decoration: underline;
+            }
         }
     }
 }
