--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -6,24 +6,19 @@
     .text {
         text-align: center;
         width: 50vh;
-        a {
-            text-decoration: none;
+        button {
+            text-wrap: nowrap;
+            border: solid 1px black;
+            border-radius: 10px;
+            background-color: black;
+            color: aquamarine;
+            padding: 1vh;
+            transition: 0.2s;
+        }
+        button:hover {
+            background-color: white;
             color: black;
             transition: 0.2s;
-            p {
-                padding: 1%;
-                transition: 0.2s;
-                border-radius: 10px;
-            }
-        }
-        a:hover {
-            color: rgb(0, 0, 0);
-            p {
-                background-color: #FDFD96;
-                border-radius: 10px;
-                transition: 0.2s;
-                text-decoration: underline;
-            }
         }
     }
 }
