--- a/CSS/home.css
+++ b/CSS/home.css
@@ -59,9 +59,9 @@
         background-image: url("Media/Pages/home/IMG_8199.JPG");
     }
     20% {
-        background-image: url("Media/Pages/home/IMG_9303.JPG");
+        background-image: url("Media/Pages/home/IMG_9303.jpg");
     }
     40% {
-        background-image: url("Media/Pages/home/IMG_9712_01.JPG");
+        background-image: url("Media/Pages/home/IMG_9712_01.jpg");
     }
 }
